# ivory

./: .coveragerc  .gitignore  .travis.yml  404.html  Cargo.toml  Makefile  README.md  appveyor.yml  index.html  mkdocs.yml  overview.pptx  pyo3-polars-bug-report.md  pyproject.toml  run.py  setup.cfg  setup.py  sitemap.xml
.devcontainer/: devcontainer.json  postCreate.sh
.github/workflows/: ci.yaml  ci.yml  publish.yaml  publish_to_pypi.yml  pythonpackage.yml
crates/core/: Cargo.toml
crates/python/: Cargo.toml
crates/python/src/: optimize.rs
docs/: extra.css  index.md  quickstart.md  quickstart.py
docs/api/: ivory.callbacks.md  ivory.core.base.md  ivory.core.client.md  ivory.core.data.md  ivory.core.run.md
docs/examples/: example.py
docs/tutorial/: callback.md  callbacks.md  cli.md  client_experiment_run.py  core.md  data.md  data.py  experiment.md  instance.md  library.md  metrics.md  metrics.py  model.md  model.py  overview.py  run.md  task.md  tracking.md  trainer.md  training.md  tuning.md  ui.md
docs/tutorial_old/: data.py  metrics.py  params_0.yaml
examples/: base.yaml  base.yml  data.yaml  data.yml  data2.yml  example.py  example.yaml  lgb.yml  mnist.py  mnist.yaml  nnabla.yml  rfr.yaml  rfr.yml  ridge.yml  script.py  study.yml  tensorflow.yml  tf.yml  torch.yml  torch2.yml
examples/rectangle/: data.py  metrics.py  nnabla.py  suggest.py  tensorflow.py  tf.py
examples/regression/: config.yaml  new.py  params.yaml  run.py  simple.py
ivory/: __init__.py  main.py  utils.py
ivory/callback/: results.py  tracking.py  trainer.py
ivory/callbacks/: __init__.py  base.py  checkpoint.py  early_stopping.py  estimator.py  evaluator.py  metrics.py  monitor.py  pruning.py  results.py  tracking.py  trainer.py
ivory/core/: __init__.py  base.py  callback.py  client.py  collections.py  config.py  data.py  default.py  dict.py  environment.py  estimator.py  evaluator.py  experiment.py  instance.py  metrics.py  objective.py  optuna.py  parser.py  run.py  rundata.py  runner.py  state.py  tracker.py  tracking.py  trainer.py  tuner.py
ivory/lightgbm/: estimator.py
ivory/nnabla/: data.py  metrics.py  trainer.py
ivory/sklearn/: estimator.py
ivory/tensorflow/: callbacks.py  data.py  run.py  trainer.py
ivory/torch/: __init__.py  callback.py  data.py  dataset.py  metrics.py  results.py  run.py  runner.py  trainer.py
ivory/utils/: __init__.py  data.py  fold.py  mlflow.py  params.py  path.py  range.py  tqdm.py
old/tests/: conftest.py  test_main.py
python/ivory/: __init__.py  typing.py
search/: search_index.json
src/: expressions.rs
src/ivory/: optimize.py
tests/: base.yaml  client.yaml  client.yml  conftest.py  data.yaml  env.yaml  example.py  example.yaml  lgbr.yaml  params.yaml  ridge.yaml  tensorflow.py  test_abs_i64.py  test_abs_numeric.py  test_cum_sum.py  test_main.py  test_pig_latinnify.py  test_runner.py  test_sum_i64.py  test_utils.py
tests/callback/: test_callback_metrics.py  test_callback_monitor.py
(+99 files in other folders)
