[package]
name = "ivory"
version = "0.1.0"
edition = "2021"

[lib]
name = "ivory"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.5", features = ["extension-module", "abi3-py38"] }
pyo3-polars = { version = "0.20.0", features = ["derive"] }
serde = { version = "1.0.218", features = ["derive"] }
polars = { version = "0.46.0", default-features = false }
polars-arrow = "0.46.0"
num-traits = "0.2"
