[workspace]
members = ["crates/core", "crates/python"]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
polars = { git = "https://github.com/pola-rs/polars", features = [
  "dtype-struct",
], default-features = false }
polars-arrow = { git = "https://github.com/pola-rs/polars" }
