[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ivory"
version = "0.5.0"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["polars>=1.24.0"]

[dependency-groups]
dev = [
  "pytest-xdist>=3.6",
  "pytest-randomly>=3.16",
  "pytest-cov>=6",
  "pytest-clarity>=1",
  "patchelf>=0.17.2.1",
  "maturin>=1.8.2",
]

[tool.maturin]
python-source = "src"
manifest-path = "crates/bindings/Cargo.toml"
module-name = "ivory"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--doctest-modules", "--cov=ivory", "--cov-report=lcov:lcov.info"]

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:", "raise NotImplementedError"]
skip_covered = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
unfixable = ["F401"]
ignore = ["A005", "D", "PD", "T"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "ARG", "D", "FBT", "PLR", "RUF", "S"]

[tool.pyright]
include = ["src", "tests"]
