[package]
name = "ivory-python"
version = "0.5.0"
edition.workspace = true

[lib]
name = "ivory"
crate-type = ["cdylib"]

[dependencies]
polars = { workspace = true }
polars-arrow = { workspace = true }
pyo3 = { version = "0.25.1", features = ["extension-module", "abi3-py38"] }
pyo3-polars = { version = "0.23.0", features = ["derive"] }
ivory-core = { path = "../core" }
